--- a/classifieds.htm
+++ b/classifieds.htm
@@ -84,12 +84,18 @@ AC_FL_RunContent( 'codebase','http://download.macromedia.com/pub/shockwave/cabs/
             <div id="articlepic"> </div>
               <p class="editorsnote">We can help your business do more business on the website as well as the print edition. Online Classified Ads attract tens of thousands of consumers and retailers everyday. For an introductory price, any classified ad placed in the print edition will be included on the website. The Love Express online is becoming the fastest growing newspaper online since its inception the web has gained numerous reviews. </p>
               <div id="classifieds">
-                <p class="qa">Experienced Musician</p>
+                <p class="qa"><strong>Stylist Booth For Rent</strong></p>
+                <p>Stylist Booth for Rent @ the Kings Chamber Hair Studio &ndash;  Brooklyn&rsquo;s Christian Barber Salon, 1930B Nostrand Ave. $185. per week. Contact  Joaine <strong>&ndash; 646-725-0324</strong></p>
+<p class="qa">Experienced Musician</p>
                 <p><strong>Experienced musician available</strong>. 
                   Plays organ, keyboard and praise.  References available call <strong>718-669-4239</strong></p>
 <p class="qa">Organ Sales and Repair </p>
                 <p><strong> Hammond Organ Sales and Repairs.</strong> Authorized Hammond Organ and Leslie Speaker Dealer.  All musical instruments available. 516-377-7907. <a href="http://www.scottrussmusic.com " target="_blank">www.scottrussmusic.com </a></p>
-                <p class="qa">Artech Church Interiors</p>
+                <p class="qa">Hammond Organ Technician </p>
+                <p><strong>Hammond Organ Technician with 40 plus years experience.</strong><br>
+                  Specializing in older Hammond Models. Servicing A-100,<br>
+                  B-3&rsquo;s, C-3&rsquo;s and all Leslie tone cabinets. Call Paul at <strong>(908) 735-7552 or (908) 777-3434</strong> and  leave a message</p>
+<p class="qa">Artech Church Interiors</p>
                 <p><strong>Pew upholstery, Refinishing &amp; Repairs</strong>. New pews, cushioned church chairs, pulpit furniture, Replace carpet, lighting, painting &amp; full church design &amp; renovation. 100% financing available. Call <strong>1-800-222-Pews (7397)</strong> free Estimates.<a href="http://www.artechchurchInteriors.com"><strong> www.artechchurchInteriors.com</strong></a>.</p>
                 <p class="qa">Church space for rent</p>
                 <p><strong>1200 sq. ft. fully furnished</strong>; Bronx, Saturday 9am-6pm; Sundays 8am-11am and 3:30pm-7pm. 646-204-0602</p>
@@ -105,7 +111,8 @@ AC_FL_RunContent( 'codebase','http://download.macromedia.com/pub/shockwave/cabs/
                 <p class="qa">Musician Available</p>
                 <p><strong>Experienced musician available</strong>. Plays Organ and Keyboard. Versatile in traditional &amp; Contemporary music, references available call <strong>917-745-6811</strong>.</p>
                 <p class="qa">Organ Service/Parts</p>
-                <p><strong>Hammond B, C, -3 Organs for sale</strong>. Authorized Leslie Speaker, Parts, Hammond Parts Dealer. Serious callers only <strong>718-464-0952</strong>.</p>
+                <p>Hammond Organ Leslie Speakers, Modification parts, purchases  rebuilding, rentals sales, service calls and lessons. <strong>Call&ndash; 718-464-0952</strong></p>
+<p><strong>Hammond B, C, -3 Organs for sale</strong>. Authorized Leslie Speaker, Parts, Hammond Parts Dealer. Serious callers only <strong>718-464-0952</strong>.</p>
                 <p><strong>Hammond Organ Repair</strong>: Experienced technician. Meticulous workmanship. Competitive prices. Specialize in organ and Leslie speaker rebuilding and modifications. www.jporganservice.com. <strong>212-942-2437</strong>.</p>
                 <p><strong>Hammond Organ Leslie speakers</strong>, modification, parts, purchases rebuilding, rentals, sales, service calls and lessons. Call <strong>718-464-0952</strong>.</p>
                 <p class="qa">Rentals</p>
