--- a/editorial.html
+++ b/editorial.html
@@ -3,7 +3,7 @@
 <html><!-- InstanceBegin template="Templates/article_features.dwt" codeOutsideHTMLIsLocked="false" -->
 <head>
 <!-- InstanceBeginEditable name="doctitle" -->
-<title>Reflections - &ldquo;What A Man&rdquo;</title>
+<title>Edith M. Stranges: Spirit of Christmas!</title>
 <!-- InstanceEndEditable -->
 <meta http-equiv="refresh" content="600">
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
@@ -77,22 +77,17 @@ AC_FL_RunContent( 'codebase','http://download.macromedia.com/pub/shockwave/cabs/
                <!--SECTION LEFT BEGIN-->
 <div class="bodytxt" id="articlebody"><div id="articlepic" style=""><br>
   <img src="images/edithstranges.jpg" width="225" height="237" alt="Edith Stranges">              </div>
-            <h4 id="articleTitle">From the Editor</h4>
-              <div id="authorname"><!--SECTION LEFT END--></div>
+            <h4 id="articleTitle">Spirit of Christmas!</h4>
+              <div id="authorname"><!--SECTION LEFT END-->Edith M. Stranges Editor / Publisher              </div>
+              <p><em>Philippians 4:6-7 Do not be anxious about  anything, but in everything, by prayer and petition, with thanksgiving present  your request to God, and the peace of God which transcends all understanding, will grant your hearts and your minds in  Christ Jesus.</em></p>
               
-              <p align="center" class="qa">Dear Brothers and Sisters in the Lord:</p>
-              <p>For the first time in 30 years we were  not able to deliver <b>The</b> <b>Love</b> <b>Express</b> on time due to the weather conditions. We have always  strived to get the papers to the churches and  businesses before the first Sunday of the next month. We are so sorry  some didn&rsquo;t get theirs on time, but they were delivered a bit later. Praise  God!</p>
-              <p>February was a harsh month where many of  our blessed distributors were either sick or stuck in their homes due to the  snow and ice. We appreciate our distributors and I do not want them in any  dangerous situations. Other distributors helped out with extra deliveries.  Praise God!</p>
-              <p>Brothers and Sisters, let us keep in  Prayer the many churches and businesses along the East Coast, especially Boston  so affected by the snow storms. God bless them and keep them and their families and homes safe and secure. Praise God!</p>
-              <p class="qa">Dear Pastors and members: </p>
-              <p>We know many  pastors chose to close their churches because of the snow and ice and to keep  their members safe. </p>
-              <p>It is also  important that members keep up with their tithes and offerings so that these churches will be opened and praising the Lord.</p>
-              <p>We must pray  and trust God for a &ldquo;miracle weather breakthrough.&rdquo; We now have to step out in  faith and press our way on to this breakthrough. Spring will soon be here!</p>
-              <p align="right"><b>Sister Edith</b>              </p>
-              <div></div>
-</div>
-          <div id="body_adspace"></div>
-          <!-- InstanceEndEditable --> 
+              <p>Today, the  Christmas season creeps in earlier and earlier. Gift catalogs begin arriving at  the end of summer, decorations appears in stores way before Halloween, as the  push toward December 25 and New Year&rsquo;s; it&rsquo;s so much easy to forget the  spiritual meaning of Christmas.</p>
+              <p>It is a struggle for families, single  moms, students, hurricane victims and those who lost a job. The pressure is one  to buy gifts, send out cards, holiday dinners, decorate the office and home. Christmas is a time to achieve a balance  between our inner lives and the hectic pace of the outside world. On Christmas  Day, many are left exhausted and anxious to get everything over with; somehow  we missed something. Where was the peace and joy that supposedly came at this  time. <strong>The message the angels declared to  the shepherds. Peace on Earth? Where, oh Lord is that peace?</strong></p>
+              <p>I would cry <strong>&ldquo;Where is the spirit of Christmas, where&rsquo;s the joy</strong>, until I got  quiet. That&rsquo;s the key; quietness in your soul. I heard the Lord say to me &ldquo;I&rsquo;m  your joy all year long.&rdquo; What a liberating moment, to let all the stuff go, it  was just stuff. What&rsquo;s important is our relationship with Jesus. The world  views Christmas as just another opportunity to party, and have a family  gathering. I know. I used to think that way, and I&rsquo;m sure before Jesus came  into your life, your belief system was the same. Today be liberated and enjoy  this time with your family. If you don&rsquo;t have enough money to purchase gifts,  send them a homemade card with a list of things you will do for them. Be  encouraged. Tell someone today, Jesus loves them. Get busy working for the  Kingdom of God.</p>
+              <p>Remember to support your church and  visit your local Christian bookstores. Continue to support local ministries who  help the less fortunate.</p>
+              <p><strong><em>P.S. Be alert,  ask questions, don&rsquo;t be fooled, don&rsquo;t be misled by anything that is called  &ldquo;Christian.&rdquo; The goal of The Love Express is not to be a pa&shy;per of competition,  strife or jealousy, although sometimes it appears that way. My heart is for the  reconciliation of Body of Christ.</em></strong></p>
+              <p><strong><em>Remember January is Fasting Month.</em></strong></p>
+              <p align="right"><strong>Edith</strong></p></div><!-- InstanceEndEditable --> 
               <div id="textnav"><a href="index.htm">Home</a>&nbsp;|&nbsp;<a href="events.html">Regional Events</a>&nbsp;|&nbsp;<a href="features.htm">Features</a>&nbsp;|&nbsp;<a href="classifieds.htm">The Classifieds</a> &nbsp;|&nbsp;<a href="aboutus.html">About Us</a>&nbsp;|&nbsp;<span class="style3">Commentary</span>&nbsp;|&nbsp;<span class="style3">Community</span>&nbsp;|&nbsp;<span class="style3">Links</span></div> 
               <div id="credits">&copy;2007 The Love Express. All rights reserved. Serving the Christian Community for over 20 years.</div> 
             </div> 
