--- a/events.html
+++ b/events.html
@@ -109,85 +109,87 @@ AC_FL_RunContent( 'codebase','http://download.macromedia.com/pub/shockwave/cabs/
               <div class="bodytxt">
                 <div id="articlepic">
                   <div class="photocredits2"> </div>
-                  <img src="images/tony-kemp2.jpg" width="92" height="85" alt="tony kemp"></div>
-                <h2>Trifecta - Conference - Nov. 12th-14th.</h2>
-                <p>M<strong>antle of Power Mi&shy;nistries</strong> presents <strong>Trifecta Con&shy;fe&shy;rence </strong>(Spirit, Soul, Body) <strong>Thurs&shy;day-Saturday,  No&shy;vember 12th-14th</strong> with <strong>Bishop Jo&shy;seph Garlington</strong>, (Cove&shy;nant  Church of Pittsburg), <strong>Tony Kemp</strong>, (Tony Kemp Ministries), <strong>Katie Souza</strong> (Katie Souza Ministries), and your host <strong>Paulette Polo </strong>(Mantle of Power    ...<a href="trifecta-conference-nov-12-14th.html">Read More</a>
+                  <img src="images/3x5_joc_christmas-concert.jpg" alt="" width="114" height="85" id="authorpic" /></div>
+                <h2>The Joy of Christmas</h2>
+                <p><strong>Calvary and World Missions Steel Or&shy;chestras</strong> present <strong>The Joy of Christmas (An evening of steel  and jazz), Saturday, Decem&shy;ber 12th </strong>@ <strong>Calvary  Cathedral of Praise</strong>, 45 East 8th Street, Brooklyn, New York;<strong> Dinner Reception: 4:00pm</strong> - Ad&shy;mis&shy;sion:  $25; <strong>Christmas Con&shy;cert, 6:00pm</strong> -  Free Admission. Featured artists: Calvary and       ...<a href="the-joy-of-christmas.html">Read More</a>                </p>
+                <div id="articlepic">
+                  <div class="photocredits2"> </div>
+                  <img src="images/unbroken-chain-3x5-color-december-christmas-concert-ad-for-love-express-2015.jpg" alt="" name="authorpic" width="106" height="85" id="authorpic2" /></div>
+                <h2>Unbroken Chain Church</h2>
+                <p><strong>Friday, December 18th, 7:30pm,</strong> Free Gospel Con&shy;cert - International, World-Re&shy;nowned Unbroken Chain Music Ministry @ Baruch Performing Arts Center, Baruch College: East 25th Street, (between Lexington &amp; 3rd Avenues), New York, New York. 
+For more information call (718)372-9897 or visit  www.unbrokenchain.org      ...<a href="reverend-anna-nell.html">Read More</a>                </p>
+                <div id="articlepic">
+                  <div class="photocredits2"> </div>
+                  <img src="images/kurtcarr2-1.jpg" alt="Vickie Winans" name="authorpic" width="90" height="85" id="authorpic4" /></div>
+                <h2>Regional Renewal</h2>
+                <p>Free N.O.W. - A night of Worship Shifting the Atmosphere! Wor&shy;ship is a spiritual response to the awareness that happens simultaneously be&shy;tween us and God. En&shy;coun&shy;ter the Creator God as He reveals Himself by releasing His throne-room sound in and through You, His creation!<strong> Regional Re&shy;newal, Saturday, De&shy;cember 12th 9am </strong>      ...<a href="regional-renewal-steve-swanson.html">Read More</a>                </p>
+                <div id="articlepic">
+                  <div class="photocredits2"> </div>
+                  <img src="images/christmas-cantata.jpg" alt="" width="130" height="85" /></div>
+                <h2>The Night the Angels Sang</h2>
+                <p>A must see for the holiday season! Ex&shy;pe&shy;ri&shy;ence the grandeur and majesty of one of the lon&shy;gest running and largest <strong>Christmas shows by Up&shy;per Room Christian World Center on Long Is&shy;land.</strong> En&shy;titled &ldquo;<strong>The Night the An&shy;gels Sang</strong>, this magnificent production evolves every year with newly up&shy;dated scenes. <strong>Friday</strong>       ...<a href="the-night-the-angles-sang.html">Read More</a>                </p>
+                <div id="articlepic">
+                  <div class="photocredits2"> </div>
+                  <img src="authors/jimbiscardi.jpg" alt="Jim Biscardi Jr" name="authorpic" width="68" height="85" id="authorpic7" /></div>
+                <h2>Would You Fellowship With Me?</h2>
+                <p>Jesus  said, &ldquo;Abide in Me, and I in you.&nbsp; As the  branch cannot bear fruit of itself, except it abide in the vine; no more can you except you abide in Me.  I am the vine, you are the branches.&nbsp; He  that abides in Me, and I in him, the same brings forth much fruit: for without  Me, you can do nothing.&rdquo; John 15: 4-5. Fellowship is one of the six important  ways     ...<a href="jimbiscardi-would-you-fellowship-with-me.html">Read More</a>                </p>
+                <div id="articlepic">
+                  <div class="photocredits2"> </div>
+                  <img src="images/elizabethmadison.jpg" alt="Elizabeth Madison" name="authorpic" width="57" height="85" id="authorpic9" /></div>
+                <h2>Winterize Your Diet</h2>
+                <p>So you spent the summer eating healthy and exercising  outdoors. Well, now it&rsquo;s getting colder, and the days are getting shorter.  You&rsquo;ll be indoors more often, which can mean less exercise and cravings for  heavier comfort foods. &lsquo;Winterize&rsquo; your diet to stay on track with your good  habits as the temperature drops:    ...<a href="elizabethmadison-winterize-your-diet.html">Read More</a>
 </p>
                 <div id="articlepic">
                   <div class="photocredits2"> </div>
-                  <img src="images/alcc-wwconv2015-newspaper-fp-color-oct-ad-clara-franklin.jpg" alt="" name="authorpic" width="142" height="85" id="authorpic2" /></div>
-                <h2>Enlarge My Coast</h2>
-                <p>A<strong>bundant Life Chris&shy;tian  Center (WWC) Worldwide Conven&shy;tion 2015</strong> with <strong>Pastor Mike Adebiyi</strong>, <strong>Bishop  Tudor Bis&shy;mark</strong>,<strong>Pastor Matthew Ashi&shy;molowo</strong>, <strong>Bishop Paul Mor&shy;ton</strong>.  Hosted by <strong>Dr. Fes&shy;tus Adeyeye</strong>. Enlarge My Coast (1 Chronicles 4:10, <strong>Septem&shy;ber  30th-October 4th</strong> (<strong>Wed&shy;nesday-Saturday:</strong>    ...<a href="alcc-worldwide-convention.html">Read More</a>
+                  <img style="border:1px #666 solid" src="authors/charlottehall.jpg" width="68" height="85" alt="Charlotte Hall" /></div>
+                <h2><span class="qa">Jesus Is The Reason for The Season</span></h2>
+                <p>HELLO BELOVED! We thank God for this glorious season that is  upon us. The season that celebrates the birth of our Lord and Savior Jesus  Christ! Less we forget, JESUS IS THE REAL REASON FOR THE SEASON! Imagine my  surprise as I walked into the sanctuary one Sunday morning in early October  only to find the congregation up and greeting     ...<a href="focuson.html">Read More</a>
 </p>
                 <div id="articlepic">
                   <div class="photocredits2"> </div>
-                  <img src="images/carol-kent.jpg" alt="" name="authorpic" width="84" height="85" id="authorpic3" /></div>
-                <h2>Women&rsquo;s Conference 2015<br>
-                </h2>
-                <p>C<strong>alvary Baptist Church</strong> - <strong>Women&rsquo;s  Conference 2015 </strong>(Topic: Unquenchable Faith) with guest Speaker <strong>Carol  Kent</strong>, <strong>Saturday, No&shy;vember 14th, 9:30am-4pm</strong> @ 123 West 57th Street,  (between 6th &amp; 7th Ave&shy;nues), New York, NY 10019. <strong>Carol  Kent</strong> is a best-selling author and a popular international public     ...<a href="womens-conference-2015.html">Read More</a>                </p>
+                  <img src="images/donaldreid.jpg" alt="" width="63" height="85" /></div>
+                <h2>End of Year Tax Tips</h2>
+                <p>When you  think of the holiday season, what comes  to&nbsp; mind? Gift Exchanges? Holiday  parties? Home-baked pies? Taxes? The holiday season is a great time to take some last- minute tax  deductions before the year is over. Here are some of our favorites: 1.&nbsp; Ask for a New Year&rsquo;s bonus instead of a  Christmas bonus. By delaying your bonus by only     ...<a href="donaldreid-tax-stresst.html">Read More</a>                </p>
                 <div id="articlepic">
                   <div class="photocredits2"> </div>
-                  <img src="images/jaunita-bynum.jpg" width="63" height="85" alt="Juanita Bynum"></div>
-                <h2>DCC Holy Convocation</h2>
-                <p>D<strong>unamis Covenant Connection  Holy Convocation</strong> (Go&shy;vernment, Glory &amp; Growth), <strong>Wed-Sun, Oc&shy;tober  14th-18th</strong> <strong>7:30pm</strong> nightly (<strong>Sat: Pastoral Luncheon</strong> @ <strong>12noon;  Sun:4pm-Official Day</strong>). Speakers: <strong>Dr. Ja&shy;mal Bryant</strong>, <strong>Archbishop  Roy E. Brown</strong>, <strong>Ambassa&shy;dor</strong> <strong>Juanita</strong> <strong>By&shy;num</strong> &amp; <strong>Arch&shy;bishop  </strong>    ...<a href="dcc-holy-convocation.html">Read More</a>
+                  <img src="images/christmas-cantata2.jpg" alt="" name="authorpic10" height="85" class="" id="authorpic10" /></div>
+                <h2>History Christmas Cantata</h2>
+                <p>Join the <strong>New Greater Bethel Ministries</strong> for their <strong>Christmas Can&shy;tata History</strong> (Dramatic  pre&shy;sentation of <strong>His Birth &amp; Life</strong>, <strong>Sat-Mon,  December 19th-21st, 7pm </strong>nightly. Sing&shy;ing, Dancing,  Live Animals and incredible pa&shy;geantry. Travel  back in time with us to Bethlehem to the glorious birth of our Lord and Savior  Jesus Christ. Come     ...<a href="history-christmas-cantata.html">Read More</a>
 </p>
                 <div id="articlepic">
                   <div class="photocredits2"> </div>
-                  <img src="images/david-burrows.jpg" width="64" height="85" alt="Pastor David Burrows"><img src="images/dean-brown.jpg" alt="Pastor Dean A. Brown" name="authorpic" width="64" height="85" id="authorpic4" /></div>
-                <h2>Men Alive 2015<br>
-                </h2>
-                <p>C<strong>hrist Alive Chris&shy;tian  Center Men&rsquo;s Con&shy;ference Men Alive 2015 Thursday-Saturday, October 22nd-24th</strong> with <strong>Pastor David Burrows</strong> and <strong>Pastor Dean A. Brown. (Thurs &amp; Fri  @ 7pm; Sat &amp; Sun @ 10am). </strong>Registration Fee:Adult Men - $25; Jr. High  &amp; Hight School Young Men&nbsp; - Free.  (Saturday Lunch is     ...<a href="men-alive-2015.html">Read More</a>
+                  <img src="images/kfranklin.jpg" width="84" height="85" alt="tony kemp"></div>
+                <h2>Christmas Celebration</h2>
+                <p><strong>Evangel Multi Media &amp; Arts Center</strong> presents  the most spectacular dramatic, Broadway -Style musical production in the Washington, D.C., Mary&shy;land, Virginia, Pennsylvania and Delaware  Metroplex <strong>Christmas Ce&shy;lebra&shy;tion 2015  25th Anni&shy;versary, Saturday-Sun&shy;day,  Decem&shy;ber 5th-20th</strong> with a cast of over 200 men, wo&shy;men    ...<a href="evangel-cathedral.html">Read More</a>
 </p>
-<div id="articlepic">
+                <div id="articlepic">
                   <div class="photocredits2"> </div>
-                  <img src="images/halloween.jpg" alt="" name="authorpic" width="123" height="85" id="authorpic" /><br>
-</div>
-                <h2>H a l l o w e e n</h2>
-                <p>The origins and traditions of  Halloween can be traced back thousands of years to the days of the ancient  Celts and their priests, the Druids. The eve of October 31 marked the  transition from summer into the darkness of winter. It marked the Celtic New  Year. The Feast of Samhain was a fearsome night, a dreaded night,   ...<a href="halloween.html">Read More</a>                </p> 
-<div id="articlepic">
-                  <div class="photocredits2"> </div>
-                  <img src="images/star99.jpg" alt="" name="authorpic" width="198" height="85" id="authorpic5" /><br>
-</div>
+                  <img src="images/star99.jpg" alt="" name="authorpic" width="198" height="85" id="authorpic11" /></div>
                 <h2>Networking Breakfasts</h2>
-                <p>Join <strong>Star99.1</strong> for one of  our upcoming monthly <strong>Networking Breakfast</strong> meetings. This is your place  to network, socialize and learn from one of our guest speakers on topics that  are sure to help you and your business. Upcoming Meet&shy;ings: <strong>December 10th</strong> - The Olde Mill Inn, 225 Route 202, Basking Ridge, New Jer&shy;sey...<a href="halloween.html">Read More</a>                </p>                               
+                <p>Join <strong>Star99.1</strong> for one of  our upcoming monthly <strong>Networking Breakfast</strong> meetings. This is your place  to network, socialize and learn from one of our guest speakers on topics that  are sure to help you and your business. Upcoming Meet&shy;ings: <strong>December 10th</strong> - The Olde Mill Inn, 225 Route 202, Basking Ridge, New Jer&shy;sey. Please contact      ...<a href="network-breakfasts-star99.html">Read More</a>
+</p>
                 <div id="articlepic">
                   <div class="photocredits2"> </div>
-                  <br>
-  </div>
-                <h2>Oasis Singles Fall Celebration </h2>
-                <p>Discover the power of praise!  This year the theme of our <strong>OASIS Fall Celebration </strong>will be <strong>&ldquo;A Night of  Worship RAISE THE PRAISE!&rdquo; </strong>You are invited to join hundreds of Christian  singles of all ages, from all walks of life and from all denominations  throughout the tri-state area for this uplifting evening featuring dinner,  dessert   ...<a href="cindygaldalruperto.html">Read More</a><br>
-                </p>
+                  <img src="images/julie-brown.jpg" width="85" height="85" alt="Julie Brown"></div>
+                <h2>Christmas Musical</h2>
+                <p>Mo<strong>rning Star Mis&shy;sionary Baptist Church</strong> presents <strong>A Christmas Musical Cele&shy;bration,  Saturday, De&shy;cember 12, 2015</strong> @ <strong>4pm</strong> (Doors open at 3pm) featuring <strong>Pastor David</strong> <strong>Wright </strong>&amp; the <strong>NY</strong> <strong>Fellowship</strong> <strong>Choir</strong>, <strong>Jolie </strong>&ldquo;<strong>Rocke</strong>&rdquo; <strong>Brown</strong>, <strong>M.S.M.B.C. Con&shy;cert Choir</strong>, <strong>Derrick</strong> <strong>Wright &amp;</strong> <strong>Driven</strong>, the <strong>Gospel</strong> <strong>Ship</strong> <strong>Crusa&shy;ders</strong> and ...<a href="trifecta-conference-nov-12-14th.html">Read More</a></p>
                 <div id="articlepic">
                   <div class="photocredits2"> </div>
-                  <img src="images/elizabethmadison.jpg" alt="Elizabeth Madison" name="authorpic" width="57" height="85" id="authorpic8" /><br>
-  </div>
-                <h2>Nutrition &amp; Autoimmune Diseases</h2>
-                <p><strong>I</strong>n the last few years, I&rsquo;ve seen an increase in the  number of my clients that have been diagnosed with autoimmune diseases such as  lupus, fibromyalgia, and rheumatoid arthritis. These are chronic conditions  that can severely impact one&rsquo;s quality of life. My clients always ask if they  can treat their condition through healthy ...<a href="elizabethmadison-nutrition-and-autoimmunie-diseases.html">Read More</a></p>
-                <div id="articlepic">
-                  <div class="photocredits2"> </div>
-                  <a href="images/djs-cadillac-kid-k-luv-dirtyfingers-rome-n-dr-d-.jpg"><img style="float:right; padding-left:25px;"  src="images/djs-cadillac-kid-k-luv-dirtyfingers-rome-n-dr-d-.jpg" width="96" height="85" alt="DJ Cadillac Kid, DJ K-Luv, DJ Dirtyfingers, DJ Rome, Dr. D"></a><br>
-  </div>
+                  <a href="images/djs-cadillac-kid-k-luv-dirtyfingers-rome-n-dr-d-.jpg"><img style="float:right; padding:0 0 0 25px;" src="images/dr-gee-pastor-thompson-and-bishop-redmon.jpg" width="106" height="85" alt="Dr. Gee, Pastor Thompson and Bishop Redmon"></a><br>
+</div>
                 <h2>AllAroundTown<br />
                 </h2>
-                <p>Principal Beverly Logan realizes  it take more than just the school board to help our students achieve.&nbsp; It will take the schools, our churches, our  communities to take back our children and our streets.&nbsp; We live in a time where are young black men  are not safe,and our babies cannot walk the streets safely in the day  time ...<a href="allaroundtown.html">Read More</a></p>
+                <p>Our <strong>first  stop</strong> was in Springfield Gardens, Queens at  Antun&rsquo;s Banquet Hall for the 10th anniversary and celebration of citizenship  for <strong>Pastor Trina K. Thompson</strong>. I&rsquo;ve  had the honor and plea&shy;sure to be a guest at many church banquets,  anniversaries, and all types of celebrations, but I must say Worship Center  International knows how to  ...<a href="allaroundtown.html">Read More</a></p>
                 <div id="articlepic">
                   <div class="photocredits2"> </div>
                   <br>
 </div>
                 <h2>The Five Star Man</h2>
-                <p>The Five Star Man&rdquo; is a dating handbook  written for women and discusses the hazards of dating while at the same time  examines the overall stability of today&rsquo;s man. It encouragaes women to use the  dating period as a time of investigation and not just infatuation and suggest  that choices be based on self-worth and value  ...<a href="naomi-williams--the-five-star-man.html">Read More</a><br>
-                </p>
-                <div id="articlepic">
-                  <div class="photocredits2"> </div>
-                  <img src="images/ellencomis.jpg" width="69" height="85" alt="Ellen Comis"><br>
-</div>
-                <h2>Healing Through The Word</h2>
-                <p>Are you praying for a  miracle?&nbsp; Is there a situation in your  life that needs God&rsquo;s healing touch? Today I would like to speak about the  importance of saying what God says about your situation and not allowing words  that are opposite to His Word come out of your mouth.&nbsp; Before I go any further let&rsquo;s look at what  the Bible has to say   ...<a href="ellencomis-healing-through-the-word.html">Read More</a>
-                </p>
+                <p>The Five Star Man&rdquo; is a dating handbook  written for women and discusses the hazards of dating while at the same time  examines the overall stability of today&rsquo;s man. It encouragaes women to use the  dating period as a time of investigation and not just infatuation and suggest  that choices be based on self-worth and value  ...<a href="naomi-williams--the-five-star-man.html">Read More</a></p>
                 <div id="articlepic">
                   <div class="photocredits"> </div>
                   <img style="border:1px #666 solid" src="authors/charlottehall.jpg" width="68" height="85" alt="Charlotte Hall" /><br>
-            </div>
+          </div>
                 <h2><span class="qa">The Importance of The School Year Routine</span></h2>
                 <p align="center">The school year 2015- 2016 is  well on its way. Its extremely important for the school year routines to be  checked and possibly re-vamped to ensure success and promotion.&nbsp; 1.  Hopefully by now the bedtime hour has been set and is being followed. An early  set bedtime is vital. The National                Sleep Foundation says kids ages  ...<a href="focuson.html">Read More</a></p>
                 <div id="articlepic">
