--- a/features.htm
+++ b/features.htm
@@ -3,7 +3,7 @@
 <html><!-- InstanceBegin template="/Templates/lovexcss2.dwt" codeOutsideHTMLIsLocked="false" -->
 <head>
 <!-- InstanceBeginEditable name="doctitle" -->
-<title>Features</title>
+<title></title>
 <!-- InstanceEndEditable -->
 <meta http-equiv="refresh" content="600">
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
@@ -135,44 +135,51 @@ AC_FL_RunContent( 'codebase','http://download.macromedia.com/pub/shockwave/cabs/
 <div class="bodytxt">
 <div id="articlepic">
                   <div class="photocredits2"> </div>
-                  <a href="images/war-room-poster-2a015.jpg"><img src="images/war-room-poster-2015.jpg" alt="" name="authorpic" width="84" height="85" id="authorpic2" /></a><br>
+                  <a href="images/war-room-poster-2a015.jpg"><img src="images/full_fasting-for-beginners.jpg" alt="knife fork and empty plate" width="138" height="85"></a><br>
   </div>
-                <h2>War Room Wins Big
-With <br>
-The Power of Prayer</h2>
-                <p>War Room&rsquo;s Priscilla Shirer  (Elizabeth Jordan) and her husband T.C. Stallings (Tony Jordan) are a couple  who on the surface have it all: solid careers, a beautiful home, and a cute  middle schooler. The reality is quite different than appearances. They live in  a metaphorical &ldquo;war zone&rdquo; and they quite regularly ambush each other with harsh  and cynical...<a href="war-room-wins-big-with-the-power-of-prayer.html">Read More</a><br>
+                <h2>Pray Fasting And Empower<br>
+What Who Where When and Why? </h2>
+                <p>To deny the flesh in order to be more keenly aware of God&rsquo;s  presence, direction and power. It is a discipline that pleases God, which is to  be accompanied by prayer and cleansing. Fasting alone, is like a hollow  building. It looks good on the outside, but its missing something  <br>
+                  ...<a href="pray-fasting-and-empower.html">Read More</a><br>
               </p>
-                <div id="articlepic">
-                  <div class="photocredits2"> </div>
-                  <img src="images/dr.mac-pier.jpg" alt="" name="authorpic6" width="57" height="85" id="authorpic6" /></div>
-                <h2>Catalytic Leaders Maximize Leadership
-              Potential</h2>
-                <p>For the past five years <strong><u>Movement  Day</u></strong> has been catalyzing leadership teams to serve the world&rsquo;s largest  cities more effectively by advancing high-level, city-changing collaborative  partnerships. On <strong>October 29, 2015</strong>, leaders will once again gather at the  New York Hilton Midtown to advance Gospel movements in cities     ...<a href="catalytic-learders-maximize-potential-at-movement-day-2015.html">Read More</a>
 <div id="articlepic">
                   <div class="photocredits2"> </div>
+                  <a href="images/war-room-poster-2a015.jpg"><img src="images/movement-day-2.jpg" alt="" name="authorpic" width="199" height="85" id="authorpic3" /></a><br>
+  </div>
+                <h2>Why Racial Reconciliation </h2>
+                <p>When Pete  Scazzero founded New Life Fellowship Church in Queens, NY, in 1987 he  envisioned a church that would bridge a community across racial, cultural and  economic lines. With members from more than 70 nations  eventually filling his pews, Scaz&shy;- zero, who is white, soon realized his  vision was in trouble                    ...<a href="why-racial-reconciliation.html">Read More</a><br>
+              </p>
+<div id="articlepic">
+  <div class="photocredits2"> </div>
+                  <a href="images/war-room-poster-2a015.jpg"><img src="images/christmas-cantata.jpg" alt="" width="149" height="85" /></a><br>
 </div>
-                <h2>Appreciation Month
-Prayers <br>
-For Your Pastor</h2>
-                <p>Let the thought sink deep into  the heart of every church, that their minister will be such a minister as their  prayers make him... How perilous is the condition of that minister... whose  heart is not encouraged, whose hands are not strengthened, and who is not  upheld by the prayers of his people!                 &ldquo;It  is at a fearful expense that ministers are  ...<a href="prayers-for-your-pastors-appreciation-month.html">Read More</a>                                
-                <div id="articlepic">
+                <h2>The Night the Angels Sang</h2>
+                <p>A must see for the holiday season! Ex&shy;pe&shy;ri&shy;ence the grandeur and majesty of one of the lon&shy;gest running and largest <strong>Christmas shows by Up&shy;per Room Christian World Center on Long Is&shy;land.</strong> En&shy;titled &ldquo;<strong>The Night the An&shy;gels Sang</strong>, this magnificent production evolves every year with newly up&shy;dated scenes. <strong>Friday, Dec. 18th @ 7:30pm; Saturday, </strong>  ...<a href="the-night-the-angles-sang.html#credits">Read More</a><br>
+              </p>
+<div id="articlepic">
                   <div class="photocredits2"> </div>
-                  <img src="authors/jimbiscardi.jpg" alt="Jim Biscardi Jr" name="authorpic" width="68" height="85" id="authorpic4" /></div>
-                <h2>I Must Be About My Father&rsquo;s<br>
-Business - Jesus </h2>
-                <p align="center">Not only is Jesus our Savior and  Lord, He&rsquo;s also the CEO of Father&rsquo;s business. He produces fine, living  products, and supplies unique services to unbelievers and believers who are  among His customers. We  were once lost and condemned to death because of sin.&nbsp; His service to us was that     ...<a href="jimbiscardi-about-my-fathers-business.html">Read More</a>                </p>
-                <div id="articlepic">
+                  <br>
+  </div>
+                <h2>&lsquo;Twas The Night Before Jesus&rsquo;</h2>
+                <p>Twas the night before Jesus Came and all through the house <br>
+Not a creature was praying, not one in the house.<br>
+Their Bibles were lain on the shelf without care <br>
+In hopes that Jesus would not come there<br>
+The children were dressing to crawl into bed.   ...<a href="twas-the-night-before-christmas.html">Read More</a><br>
+              </p>
+<div id="articlepic">
                   <div class="photocredits2"> </div>
-                </div>
-                <h2>Does Prayer Even Make A Difference?</h2>
-                <p><em>Jesus told his disciples a  story about how they should keep on praying and never give up. (Luke 18:1 CEV)</em>                Let&rsquo;s be honest here.&nbsp; How many times have you prayed and prayed&hellip;  and praaaayed about something in your life, only to see no change and no  affirmative answer to your prayer?...<a href="collyde-summit-2015.html">Read More</a>
-                <div id="articlepic">
+                  <a href="images/war-room-poster-2a015.jpg"><img src="images/ellencomis.jpg" width="69" height="85" alt="Ellen Comis"></a><br>
+  </div>
+                <h2>Healing Through The Word</h2>
+                <p>Christmas is the most precious time of the year- because it  is the day we celebrate the birth of our Lord and Savior Jesus Christ. On this  holiday something supernaturally permeates the atmosphere, its God&rsquo;s love do  you feel it? It is supernatural because some of the strangest people are  touched and changed by it, absolutely amazing!   ...<a href="ellencomis-healing-through-the-word.html">Read More</a><br>
+              </p>
+<div id="articlepic">
                   <div class="photocredits2"> </div>
-                  <img src="images/rose-vacation.jpg" name="authorpic" width="72" height="85" id="authorpic3" align="right" /></div>
-                <h2>Viewpoint: Vacation-Kids-Jesus-Beauty</h2>
-                <p>On Cruise ships they always have  interdenominational services on Sunday mornings. I always enjoy these services  and met Pastors and their families who sometimes knew about the Love Express. At  Resorts they always have a Gideon Bible or a Spanish Bible in the End table  draws   ...<a href="rose-lictro--vacation.html">Read More</a></p>
-</div>
-            </div>
+                  <a href="images/war-room-poster-2a015.jpg"><img src="authors/jimbiscardi.jpg" alt="Jim Biscardi Jr" name="authorpic" height="85" id="authorpic4" /></a><br>
+  </div>
+                <h2>The Gospel of Jesus Christ </h2>
+                <p>Gospel means &ldquo;good news.&rdquo; It starts back in the Garden of  Eden.&nbsp; God&ndash;The Father, The Word, and Holy  Spirit &ndash; One God in three persons - created man out of the dust of the earth,  and then created woman out of one of Adam&rsquo;s ribs. (Jn. 1:1; Gen. 2:7, 21-22). He  created them for fellowship with Himself and to give Him glory. He told the  sole residents of earth to enjoy  ...<a href="jimbiscardi-about-my-fathers-business.html">Read More</a></p></div></div>
           <!--SECTION LEFT BEGIN-->
           <div id="section_left" style="float:left;"></div>
           <!--SECTION LEFT END-->
