--- a/givingthankstotheking.html
+++ b/givingthankstotheking.html
@@ -75,12 +75,13 @@ AC_FL_RunContent( 'codebase','http://download.macromedia.com/pub/shockwave/cabs/
             <div id="maincontent"> <!-- InstanceBeginEditable name="maincontent" -->
         <!--SECTION LEFT BEGIN-->
 <div class="bodytxt" id="articlebody">
-            <div id="articlepic"><img src="images/vickiewinans2.jpg" alt="Vickie Winans" name="authorpic" width="200" height="198" id="authorpic" /> </div>
+            <div id="articlepic"><img src="images/kurtcarr2-1.jpg" alt="Vickie Winans" name="authorpic" width="255" height="255" id="authorpic" /> </div>
             <h4 id="articleTitle">Giving Thanks to the King </h4>
               <div id="authorname"><!--SECTION LEFT END-->
  </div>
-              <p align="center">B<strong>ethel Gospel Ta&shy;ber&shy;nacle Worship &amp; Fine Arts</strong> in conjunction with <strong>H.O.P.E.  for ex-offenders</strong>, <strong>Inc</strong>. &amp; <strong>New Be&shy;ginnings Center of </strong><strong>Hope </strong>presents <strong>Giving Thanks to the King Year-End  Bene&shy;fit Concert</strong>, <strong>Sa&shy;turday,  De&shy;cember 6, 2014</strong> @ <strong>5:30pm</strong> featuring the dynamic <strong>Vic&shy;kie Winans</strong>. </p>
-              <p align="center"><strong><em> Bethel Gospel  Taber&shy;nacle, 110-25 Guy R. Bre&shy;wer Blvd., Jamaica, NY 11434. Dr. Roderick R.  Caesar, Senior Pastor. For additional information please call (718) 291-2677 or visit www.bgtfi.us</em></strong></p>
+              <p align="center">Bethel Gospel Taber&shy;nacle (BGT) Wor&shy;ship &amp; Fine Arts in conjunction with H.O.P.E. for Ex-Offenders present Giving Thanks to the King Year-End Benefit Concert, Fri&shy;day, <strong>Decem&shy;ber 11, 2015, 7:30pm</strong> featuring the dy&shy;na&shy;mic gospel music composer and performer Kurt Carr along with the Gar&shy;den State Choral Chapter, God&rsquo;s Anointed &amp; Adale Jack&shy;son @ Be&shy;thel Gos&shy;pel Ta&shy;bernacle, 110-25 Guy R. Brewer Boulevard, Ja&shy;mai&shy;ca, New York 11434. Giving is a good thing: Bring un&shy;wrap&shy;ped children&rsquo;s gifts for our first ever H.O.P.E. Tree Toy Drive! VIP Do&shy;na&shy;tion: $40; General Dona&shy;tion:$25. Host Pastor: <strong>Bi&shy;shop Dr. Ro&shy;de&shy;rick R. Caesar, Se&shy;nior Pastor.</strong><br>
+</p>
+              <p align="center"><strong>For further information and Groups please call us at (718) 291-2677 or you can also visit us at www.bgtfi.us.</strong></p>
 
               </div>
           <div id="body_adspace"></div>
