--- a/newsaroundthetristate.html
+++ b/newsaroundthetristate.html
@@ -83,21 +83,16 @@ AC_FL_RunContent( 'codebase','http://download.macromedia.com/pub/shockwave/cabs/
   <h4 id="articleTitle">News Around the Tri-State</h4>
   <div id="authorname"></div>
   <div>
-    <p align="center" class="qa"><strong><a name="a1"></a>Holy Convocation</strong></p>
-    <p><strong>Wed-Sun, July 15th-19th,  7:30pm nightly; Sun Svc. @ 6pm @ Rehoboth  Delive&shy;rance COJCA</strong>, 10-13 18th Avenue,  Newark,&#8200;New Jersey 07106. Host: <strong>Dr.  Beverley Williams, Pastor</strong>. For more info call (732) 939-7556 or (973)  371-2120.</p>
-    <p class="qa"><strong><a name="a2"></a>Gospel/Jazz Brunch</strong></p>
-    <p><strong>Flavaorful Crew </strong>presents <strong>Gospel  &amp; Jazz</strong> with <strong>Brunch, </strong><strong>July 11th, 2pm-6pm @ Sa&shy;lem  United Methodist Community Center</strong>, 211 West 129th Street  (bet. 7th &amp; 8th Aves.), NY, NY. Tickets: $35.  Contacts: James Hall (917) 701-3005 Delores Franks (212) 862-1038 or Email us  at flavorfulcrew@yahoo.com</p>
-    <p class="qa"><strong><a name="a3"></a>Monk&rsquo;s Memorial</strong></p>
-    <p><strong>Monk&rsquo;s Memorial </strong>will celebrate Birthday Service for <strong>Overseer Clara Williams; </strong>special guest speaker, <strong>Sunday, July 19th</strong> @ <strong>4pm</strong> to be held at <strong>Monk&rsquo;s Memorial</strong>, Fulton Street, Brooklyn, NY. Call 516-429-5475.</p>
-    <p class="qa"><a name="a4"></a><strong>&nbsp;</strong><strong>Int&rsquo;l Conference</strong></p>
-    <p><strong>Dancing Preachers International Conference,  July 28th-August 2nd</strong> hosted  by <strong>Pastor Sabrina McKenzie</strong>, Director  of Dancing Preachers Int&rsquo;l. Speakers: <strong>Apostle  Elizabeth Hairston</strong>, <strong>Rev. Cordelia  Wallace</strong>, <strong>Dr. Mi&shy;chael Torres</strong> &amp; <strong>Bishop Earl Johnson</strong>. Venue:  Radisson Hotel JFK Airport, 135-30 140th Street, Jamaica, NY 11436.  Facilitators:Dr. Sandy Mitchell, Drs. Curtis Minter and Bobbie Minter,  Prophetess Marla King, Wendell Bullen, Patricia Smargiassi, Martin Smargiassi,  Dr. A&rsquo;renee Cooper, Yvonne Coston, Dr. Maricela Alea Vitale, Elder Gail Townes,  Julinda Lewis, Dacia Cater, Andre Reliford, Bryan Oneil &amp; Margaret Wright.  Register now at www.dancingpreachers. com or call 1-877-716-7117.</p>
-    <p class="qa">Homegoing</p>
-    <p>We regret  to announce the passing of Elder Sheila Woods Alston, Pastor of Soul Saving  Mission Pentecostal Church, Inc. Bronx, NY on June 10, 2015. Be&shy;lo&shy;ved Mother,  Aunt, Grandmo&shy;ther, Pastor and Friend.</p>
-    <p class="qa">Church  W/O Walls</p>
-    <p>Pastor  Donnie McClurkin &amp; Perfecting Faith Church - Church Without Walls; No Pews,  No Suits, No Ties - Every Sunday August 2nd, 9th, 16th &amp; 30th at 3pm.  Surprise Guest Ar&shy;tists, Giveaways, Health Fair: Blood Pres&shy;sure Screenings  &amp; Dia&shy;be&shy;tes Screenings &amp; much more! Venue:Western Beef Park&shy;ing Lot,  332 Nassau Rd., Roosevelt, Long Is&shy;land (Corner of Nassau Rd &amp; Babylon Turn&shy;ipke).  (516) 223-8300; vi&shy;sit www.perfectingfaith.org </p>
-    <p class="qa">Monk&rsquo;s  Memorial</p>
-    <p>Monk&rsquo;s  Memorial&nbsp; @ 4pm to be held at Monk&rsquo;s  Memorial, Fulton Street, Brooklyn, NY. Call 516-429-5475.</p>
-    <p align="center" class="qa">&nbsp;</p></div></div><!-- InstanceEndEditable --> 
+    <p align="center" class="qa"><b>Shopping/Cedarmore Christmas</b></p>
+    <p><b>Zion Holiday Shopping Ex&shy;po &amp; Cedarmore Christmas</b> on <b>Thursday,  Dec. 17th, 1pm-9pm</b> @ <b>Zion  Cathedral COGIC</b>, 312 Grand Avenue, Freeport, NY (In the Grand Hall, Turn  Mall) Vendors Wanted; limited Space - First come / First served. Call  516-623-9466 or 516-378-3415 Email: announcements@zioncathedral.org. Proceeds  benefit Zion Ca&shy;thedral &amp; Cedaremore Youth Services.</p>
+    <p align="center" class="qa"><b>Networking Breakfasts</b></p>
+    <p>Join <b>Star99.1</b> for one of our upcoming monthly <b>Networking  Breakfast</b> meetings. This is your place to network, socialize and learn from  one of our guest speakers on topics that are sure to help you and your  business. Upcoming Meet&shy;ings: <b>December 10th</b> - The Olde Mill Inn, 225 Route 202,  Basking Ridge, New Jer&shy;sey. Please contact  us if you have any questions about the event or how to register. Contact  Marketing Star99.1FM marketing@ star991.com</p>
+    <p> <b><i>For  more informa</i></b><b><i>tion call 732-469-0991 x 3004; visit https://www.star991. com/index.php/events/  networking-breakfast.</i></b>    </p>
+    <p align="center" class="qa"><b>Unveiling Ceremony </b></p>
+    <p>An  unveiling ceremony took place this on <b>Saturday,  Nov. 28th</b> in honor of the the late <b>Rev.  Dr. Jerry V. Burns</b> @ N<b>ew Open Door  COGIC,</b> Call (718) 455-3545 / 917-873-4346 or 718-953-3097 for more info.</p>
+    
+  </div>
+</div><!-- InstanceEndEditable --> 
               <div id="textnav"><a href="index.htm">Home</a>&nbsp;|&nbsp;<a href="events.html">Regional Events</a>&nbsp;|&nbsp;<a href="features.htm">Features</a>&nbsp;|&nbsp;<a href="classifieds.htm">The Classifieds</a> &nbsp;|&nbsp;<a href="aboutus.html">About Us</a>&nbsp;|&nbsp;<span class="style3">Commentary</span>&nbsp;|&nbsp;<span class="style3">Community</span>&nbsp;|&nbsp;<span class="style3">Links</span></div> 
               <div id="credits">&copy;2007 The Love Express. All rights reserved. Serving the Christian Community for over 20 years.</div> 
             </div> 
